--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,20 +20,20 @@
         <p></p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <div class="artwork">
-<span style="float: left; padding-left: 35px;">
+        <div class="artwork" style="width: 679px; margin: 0 auto;">
+<span style="float: left;">
 <figure class="figure">
   <img src="img/portfolio/dolphins-on-parade-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Dolphins on Parade" style="box-shadow: 3px 3px 3px lightgray;">
-  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Dolphins on Parade" sponsor: Molson<br>Easter Seals & Maritime Forces Atlantic<br>public art project</i></figcaption>
+  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Dolphins on Parade" sponsor: Molson<br>Easter Seals &amp; Maritime Forces Atlantic<br>public art project</i></figcaption>
 </figure></span> 
 
-<span style="float: left; padding-left: 25px;">
+<span style="float: left;">
 <figure class="figure">
   <img src="img/portfolio/cat-nap-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Cat Nap" style="box-shadow: 3px 3px 3px lightgray;">
   <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Cat Nap" - acrylic (detail)</i></figcaption>
 </figure></span>
 
-<span style="float: left; padding-left: 35px;">
+<span style="float: left; padding-left: 18px;">
 <figure class="figure">
   <img src="img/portfolio/maple-leaves-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Maple Leaves" style="box-shadow: 3px 3px 3px lightgray;">
   <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Maple Leaves" - acrylic (detail)</i></figcaption>
