--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,23 +1,30 @@
-<!-- Portfolio Grid Section -->
 <section id="portfolio">
   <div class="container portfolio-flex-grid">
-    <div class="row">
-      <div class="col-lg-12 text-center">
+    <div class="row">     
+<div class="col-lg-11">
+        <img src="img/portfolio/Woodland_Jam.jpg" class="img-responsive img-centered" alt="Woodland Jam">
+</div>   
+<div class="col-12 col-md-7">
+        <img src="img/portfolio/Cat_Cafe.jpg" class="img-responsive img-centered" alt="Cat Café">
+      </div>
+        <div class="col-6 col-md-4">
+        <img src="img/portfolio/Plein_Air_Painters.jpg" class="img-responsive img-centered" alt="Plein Air Painters">
       </div>
     </div>
     <div class="portfolio-flex-row">
-      {% for post in site.posts %}
-      <div class="portfolio-flex-item portfolio-item">
-        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-          <div class="caption">
-            <div class="caption-content">
-              <i class="fa fa-search-plus fa-3x"></i>
-            </div>
-          </div>
-          <img src="img/grid/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
-        </a>
+      <div class="col-12 col-md-4">
+        <img src="img/portfolio/Through_the_Trees.jpg" class="img-responsive" alt="Through the Trees">
+        </div>
+      <div class="col-12 col-md-4">
+          <img src="img/portfolio/Winter_Friends.jpg" class="img-responsive" alt="Winter Friends">
       </div>
-      {% endfor %}
+      <div class="col-12 col-md-4">
+          <img src="img/portfolio/Home.jpg" class="img-responsive" alt="Home">
+      </div>
+        <div class="col-12 col-md-8">
+        <img src="img/portfolio/Day_at_the_Beach.jpg" class="img-responsive img-centered" alt="Day at the Beach">
+      </div><div class="col-12 col-md-4"><img src="img/portfolio/The_Lilac_Bush.jpg" class="img-responsive" alt="The Lilac Bush">
     </div>
-  </div>
-</section>
+      <div class="col-md-6"><img src="img/portfolio/The_Haircut.jpg" class="img-responsive" alt="The Haircut"></div><div class="col-md-6"><img src="img/portfolio/A_Stellar_Dream.jpg" class="img-responsive" alt="A Stellar Dream"></div>
+      <div class="col-md-1"></div><div class="col-md-7"><img src="img/portfolio/Something's_Fishy.jpg" class="img-responsive" alt="Something's Fishy"></div><div class="col-md-3"><img src="img/portfolio/Blanket_Bunny.jpg" class="img-responsive" alt="Blanket Bunny"></div><div class="col-md-1"></div></div>
+</div></section>
